--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.13"
+    "axios": "^0.18.0",
+    "express": "^4.16.2",
+    "node": "^9.7.0",
+    "vue": "^2.5.13",
+    "vuetify": "^1.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.5",
